--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body{background-color: rgba(71, 39, 77, 0.938); font-family:arial, sans-serif, sans-serif;}
 .contenedor{
-    width: 80%;
-    margin: auto;
+    width: 90%;
+    margin:40px auto;
     background-color: rgb(50, 30, 56);
-    padding: 20px;
+    padding: 30px;
     text-align: center;
+    max-width: 1000px;
 }
 h1{text-align: center; color: rgb(9, 235, 160);}
 h2{color: rgb(59, 233, 175); font-family: 'permanent market', cursive;}
@@ -15,4 +16,8 @@ h1{
 }
 a{
     text-decoration: none;
+}
+@media(max-width:768px){.contenedor {padding: 20px;};h1{font-size: 32px;}
+h2{font-size: 22px;}
+button { width: 100%;}
 }
