--- a/style.css
+++ b/style.css
@@ -21,3 +21,4 @@ a{
 h2{font-size: 22px;}
 button { width: 100%;}
 }
+p {color: bisque; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
